# ShuttleWorks

./: .dockerignore  .env.example  .gitignore  .jscpd.json  .mcp.json  BACKEND.md  CLAUDE.md  CODE_HEALTH.md  FRONTEND.md  Makefile  PROTOTYPE.md  README.md  REFACTOR_PROGRESS.md  Start Tournament Scheduler.bat  Start Tournament Scheduler.command  Stop Tournament Scheduler.bat  Stop Tournament Scheduler.command  conftest.py  docker-compose.dev.yml  docker-compose.release.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  skills-lock.json  start-tournament-scheduler.sh  stop-tournament-scheduler.sh
.github/workflows/: ci.yml  publish-release.yml
archive/tournament-pre-merge/: .dockerignore  .env.example  ARCHIVED.md  Makefile  PROTOTYPE.md  conftest.py
backend/: Dockerfile  README.md  main.py  schemas.py  serializers.py  state.py
backend/adapters/: __init__.py  badminton.py
backend/api/: _backups.py  _validate.py  match_state.py  schedule.py  schedule_advisories.py  schedule_director.py  schedule_proposals.py  schedule_repair.py  schedule_suggestions.py  schedule_warm_restart.py  tournament_state.py
backend/app/: error_codes.py  main.py  paths.py  scheduler_core_path.py  schemas.py
backend/services/: suggestions_worker.py
design/: BRAND.md  motion-audit-setup-2026-05-12.md
docs/: Dockerfile  arch adjustment prompt  architectural-roadmap.md  glossary.md  index.md  nginx.conf  shuttleworks-cloud-prompt.md  shuttleworks-tech-stack.md  tech-stack.md
docs/.vitepress/: config.mts
docs/api/: index.md  signals.md
docs/architecture/: backend-structure.md  bracket-draw-canvas.md  bracket-result-queue.md  bracket-schedule-streaming.md  data-flow.md  operational-scenarios.md  quality-attributes.md  scheduling-unification.md  state-management.md  system-overview.md  unified-configuration.md  unified-operations-view.md  workspace-model.md
docs/audit-2026-04-27/: PHASE-1-AUDIT.md  PHASE-2-SUMMARY.md  PHASE-3-SUMMARY.md  PHASE-4-SUMMARY.md
docs/audits/: 00-baseline.md  00-dependency-graph-baseline.json  01-findings.md  02-review-1.md  02-review-2-3.md  03-cleanup-inventory.md  03-cleanup-unclear.md  04-refactor-program-summary.md  06-doc-inventory.md  06-stale-doc-findings.md  06-state-of-codebase.md  07-locked-functions.md  2026-05-15_bundle-4-candidates.md  2026-05-15_user-audit_meet-vs-bracket.md  2026-06-10_bracket-sibling-parity-map.md  debt-log.md
docs/changes/: 2026-05-13.md  questions.md
docs/contracts/: bracket-operations.md  index.md  meet-operations.md  operations-display.md
e2e/: README.md  global-setup.ts  global-teardown.ts  playwright.config.ts
examples/: badminton_event_setup.py  basic_schedule_core.py
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
products/tournament/: Makefile  README.md  USAGE.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
products/tournament/backend/: Dockerfile  main.py  serializers.py  state.py
products/tournament/frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
products/tournament/frontend/src/: App.tsx  api.ts  styles.css  types.ts
products/tournament/frontend/src/components/: DrawView.tsx  LiveView.tsx  ScheduleView.tsx  SetupForm.tsx  ThemeToggle.tsx  TopBar.tsx
products/tournament/frontend/src/components/setupForm/: EventEditor.tsx
products/tournament/tests/: test_smoke.py
products/tournament/tournament/: scheduler.py  state.py
products/tournament/tournament/formats/: __init__.py
products/tournament/tournament/io/: __init__.py  export_schedule.py  import_matches.py
scheduler_core/: README.md  __init__.py  pyproject.toml  schedule.py
scheduler_core/domain/: models.py
scheduler_core/engine/: backends.py  bridge.py  config.py  cpsat_backend.py  diagnostics.py  extraction.py  repair.py  validation.py  warm_start.py
scheduler_core/engine/constraints/: availability.py  court_capacity.py  freeze_horizon.py  game_proximity.py  locks_and_pins.py  objective.py  player_no_overlap.py  rest.py  stay_close.py
scripts/: codanna-serve.ps1  docs-freshness.mjs
tests/: conftest.py  test_determinism.py  test_solver_cancellation.py
tournament/: __init__.py  adapter.py  advancement.py  cli.py  draw.py  scheduler.py  state.py
(+1056 files in other folders)
