[project]
name = "scheduler-core"
version = "0.1.0"
description = "Pure-Python CP-SAT tournament scheduling engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
    "scheduling",
    "constraint-programming",
    "cp-sat",
    "ortools",
    "tournament",
    "optimization",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "ortools>=9.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scheduler_core"]

[tool.hatch.build.targets.sdist]
include = [
    "scheduler_core",
    "tests",
    "examples",
    "README.md",
    "USAGE.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
