[project]
name = "scheduler-core"
version = "1.0.0"
description = "CP-SAT scheduling engine — domain models, constraint plugins, solver entry points."
requires-python = ">=3.11"
dependencies = [
    "ortools>=9.8.0",
    "pydantic>=2.5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["scheduler_core*"]
exclude = ["scheduler_core.tests*", "scheduler_core.benchmarks*"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["benchmarks", "tests"]

[tool.ruff.lint]
# Gate on F (pyflakes) only — high signal, low noise. Broader set
# ["E","I","B","UP"] is a deferred one-time cleanup. To run later:
#   ruff check scheduler_core --select I,UP --fix && ruff format scheduler_core
select = ["F"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # package re-exports are not "unused"
