[project]
name = "scheduler-core"
version = "0.1.0"
description = "Pure-Python CP-SAT tournament scheduling engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = [
    "scheduling",
    "constraint-programming",
    "cp-sat",
    "ortools",
    "tournament",
    "optimization",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "ortools>=9.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-benchmark>=4.0.0",
    "httpx>=0.27.0",
]
backend = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# After PR 2 of the backend-merge arc, the ``tournament`` package
# moved to ``products/scheduler/backend/services/bracket/``. This
# pyproject is kept only for the dev-extras + pytest config that the
# tournament-product test suite still relies on; PR 3 retires the
# whole product, at which point this file goes away too.
packages = ["scheduler_core"]

[tool.hatch.build.targets.sdist]
include = [
    "scheduler_core",
    "tests",
    "examples",
    "README.md",
    "USAGE.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
